--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@
 #spring.datasource.username=PROYECTO
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDiver
-server.port=2525
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username=LP
-spring.datasource.password=123
+server.port=1128
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+#spring.datasource.username=LP
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#Instancia en AWS
+spring.datasource.url=jdbc:oracle:thin:@database-1.chxd6kwxqez7.us-east-1.rds.amazonaws.com:1521:ORCL
+spring.datasource.username=admin
+spring.datasource.password=Alisonvm23
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.open-in-view=true
