--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 #Añamuro_Conex
 server.port=9191
-spring.datasource.url=jdbc:oracle:thin:@proyecto-integrador1.c51awgped3uu.us-east-1.rds.amazonaws.com:1521:orcl
-spring.datasource.username=admin
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:oracle:thin:@3.238.136.92:1521:orcl
+spring.datasource.username=PY_INTEGRADOR
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
