--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,8 +2,15 @@
 #spring.datasource.username=PROYECTO
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDiver
-server.port=2525
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username=LP
-spring.datasource.password=123
+#server.port=2525
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+#spring.datasource.username=LP
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#Añamuro_Conex
+server.port=9191
+spring.datasource.url=jdbc:oracle:thin:@34.239.161.85:1521:orcl
+spring.datasource.username=PY_INTEGRADOR
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
