--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,14 @@
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 #Añamuro_Conex
-server.port=9191
-spring.datasource.url=jdbc:oracle:thin:@proyecto-integrador1.c51awgped3uu.us-east-1.rds.amazonaws.com:1521:orcl
-spring.datasource.username=admin
-spring.datasource.password=123456789
+#server.port=9191
+#spring.datasource.url=jdbc:oracle:thin:@proyecto-integrador1.c51awgped3uu.us-east-1.rds.amazonaws.com:1521:orcl
+#spring.datasource.username=admin
+#spring.datasource.password=123456789
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#Estebanprueba
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=PY_INTEGRADOR
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
