--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.datasource.url=jdbc:oracle:thin:@34.239.161.85:1521:orcl
 spring.datasource.username=PY_INTEGRADOR
 spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=evalayte@gmail.com
+spring.mail.password=potywgxyvxnyyqsm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
