--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1144
-spring.datasource.url=jdbc:oracle:thin:@34.239.161.85:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@3.236.72.175:1521:orcl
 spring.datasource.username=PY_INTEGRADOR
 spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -15,7 +15,9 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=evalayte@gmail.com
-spring.mail.password=potywgxyvxnyyqsm
+#spring.mail.username=evalayte@gmail.com
+#spring.mail.password=potywgxyvxnyyqsm
+spring.mail.username=carlosjavajs@gmail.com
+spring.mail.password=xnikkepdgfxzhuho
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
